Fix preview alignments

--- a/style.scss
+++ b/style.scss
@@ -80,7 +80,7 @@ a {
     #preview-cams {
         display: flex;
         flex-direction: column;
-        justify-content: center;
+        justify-content: flex-start;
         align-items: center;
         width: 300px;
         padding: 20px;
